Update title for IronPeak Fitness site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IronPeak Fitness | Build Strength. Build Confidence. Build Consistency.</title>
+    <title>Aiden Smith Demo Site - Iron Peak Fitness</title>
     <meta name="description" content="A gym built for real results. Strength training, group classes, and coaching designed to help you look better, feel stronger, and stay consistent.">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
